@@ -1,12 +1,14 @@
 #include <stdio.h>
 #include <stdlib.h>
 
+#define ALIGN (2 * sizeof (void *) - 1)
+
 void *
 test (size_t s)
 {
   void *p = malloc (s);
 
-  printf ("malloc: %d, %p: %d\n", s, p, ((unsigned long) p) & 0xf);
+  printf ("malloc: %d, %p: %d\n", s, p, ((unsigned long) p) & ALIGN);
   return p;
 }
 int
@@ -16,31 +18,31 @@ main ()
   int ret = 0;
   
   p = test (2);
-  ret |= (unsigned long) p & 0xf;
+  ret |= (unsigned long) p & ALIGN;
   free (p);
 
   p = test (8);
-  ret |= (unsigned long) p & 0xf;
+  ret |= (unsigned long) p & ALIGN;
   free (p);
 
   p = test (13);
-  ret |= (unsigned long) p & 0xf;
+  ret |= (unsigned long) p & ALIGN;
   free (p);
 
   p = test (16);
-  ret |= (unsigned long) p & 0xf;
+  ret |= (unsigned long) p & ALIGN;
   free (p);
 
   p = test (23);
-  ret |= (unsigned long) p & 0xf;
+  ret |= (unsigned long) p & ALIGN;
   free (p);
 
   p = test (43);
-  ret |= (unsigned long) p & 0xf;
+  ret |= (unsigned long) p & ALIGN;
   free (p);
 
   p = test (123);
-  ret |= (unsigned long) p & 0xf;
+  ret |= (unsigned long) p & ALIGN;
   free (p);
 
   return ret;
